iptables/redsocks.firewall.conf
# Generated by iptables-save v1.6.1 on Fri Dec  6 15:36:54 2019
*mangle
:PREROUTING ACCEPT [33441:12820151]
:INPUT ACCEPT [33441:12820151]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [32127:11871807]
:POSTROUTING ACCEPT [32132:11872172]
COMMIT
# Completed on Fri Dec  6 15:36:54 2019
# Generated by iptables-save v1.6.1 on Fri Dec  6 15:36:54 2019
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [1258:93579]
:POSTROUTING ACCEPT [1491:107559]
:REDSOCKS - [0:0]
-A PREROUTING -p tcp -m tcp --dport 443 -j REDSOCKS
-A PREROUTING -p tcp -m tcp --dport 80 -j REDSOCKS
-A OUTPUT -p tcp -m tcp --dport 443 -j REDSOCKS
-A OUTPUT -p tcp -m tcp --dport 80 -j REDSOCKS
-A REDSOCKS -d 0.0.0.0/8 -j RETURN
-A REDSOCKS -d 10.0.0.0/8 -j RETURN
-A REDSOCKS -d 127.0.0.0/8 -j RETURN
-A REDSOCKS -d 169.254.0.0/16 -j RETURN
-A REDSOCKS -d 172.16.0.0/12 -j RETURN
-A REDSOCKS -d 192.168.0.0/16 -j RETURN
-A REDSOCKS -d 224.0.0.0/4 -j RETURN
-A REDSOCKS -d 240.0.0.0/4 -j RETURN
-A REDSOCKS -p tcp -j REDIRECT --to-ports 12345
COMMIT
# Completed on Fri Dec  6 15:36:54 2019
# Generated by iptables-save v1.6.1 on Fri Dec  6 15:36:54 2019
*filter
:INPUT ACCEPT [33441:12820151]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [32127:11871807]
COMMIT
# Completed on Fri Dec  6 15:36:54 2019
