iptables/shieldsup.firewall.conf
# Generated by iptables-save v1.6.0 on Wed Jun 26 08:05:32 2019
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
:LOGDROP - [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -j LOGDROP
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A LOGDROP -m limit --limit 5/min -j LOG --log-prefix "IPTABLES-DROP: " --log-level 7
-A LOGDROP -j DROP
COMMIT
# Completed on Wed Jun 26 08:05:32 2019
